# Hanvi

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main_cli.cpp  resources.qrc
.github/workflows/: build.yml
app/: app.cpp  app.h  global.qcss
components/: chipdelegate.h  chiplist.h  dictpopup.cpp  dictpopup.h  dictpopup.ui  loader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  namesetchooser.cpp  namesetchooser.h  namesetchooser.ui  namesetsmanager.cpp  rulepopup.cpp  rulepopup.h  rulepopup.ui
convert/: converter.cpp  converter.h  trie.cpp  trie.h
core/: converter.cpp  converter.h  db.cpp  db.h  dict.cpp  dict.h  io.cpp  io.h  structures.cpp  structures.h  trie.h
match/: trie.cpp
match/include/: trie.h
text/: convert.cpp  convert.h  db.cpp  db.h  dict.cpp  io.cpp  io.h
text/include/: convert.h
